@@ -34,6 +34,8 @@ parameters:
 - moved permutationseed from misc to randomization
 - new parameter randomization/lpseed to set the initial seed of the LP solver
 - setting a value for a fixed parameter will no longer return with an error, if the new value equals the one to which the parameter is fixed
+- parameters "misc/permutationseed", "misc/permuteconss", and "misc/permutevars" changed to "randomization/permutationseed",
+  "randomization/permuteconss", and "randomization/permutevars"
 
 performance improvements:
 - improved greedy solution in SCIPsolveKnapsackApproximatelyLT() for the flow cover separation
